# android-ndk

hello-neon/app/: build.gradle
hello-neon/app/src/main/cpp/: CMakeLists.txt  helloneon.c
